# Investor-Ops-Intelligence-Suite

./: .gitignore  README.md
.github/workflows/: daily-corpus-refresh.yml  scrape.yml  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: approvals.py  health.py  pulse.py  rag.py  scrape.py  settings.py  voice.py
backend/app/core/: audit.py  auth.py  email_template.py  google_api.py  limiter.py  llm.py  mcp_client.py  notifier.py  pii.py  retriever.py
backend/app/services/approvals/: dispatcher.py
backend/app/services/pulse/: generator.py  scraper.py
backend/app/services/rag/: bootstrap.py  corpus.py  ingest.py  query.py
backend/app/services/voice/: context.py  post_call.py
backend/data/: corpus.jsonl
backend/scripts/: dump_corpus.py  entrypoint.sh
backend/tests/: conftest.py  test_approvals_dispatcher.py  test_approvals_endpoint.py  test_bootstrap.py  test_corpus.py  test_notifier.py  test_pii.py  test_pulse_endpoint.py  test_pulse_generator.py  test_rag.py  test_rag_refresh.py  test_retriever_indexed_urls.py  test_scrape_endpoint.py  test_scrape_endpoint_errors.py  test_scraper.py  test_settings_endpoint.py  test_smoke.py  test_voice_context.py  test_voice_post_call.py
docs/: EdgeCases.md  Evals.md  Fixes.md  Plan.md  ProblemStatement.md  RandomIdeas.md  Rules.md  Vapi.md  suggested_improvements.md  to-do_manually.md
evals/: eval-report.md  mint_tokens.py  rag-eval.md  run_evals.py  safety-eval.md  source-manifest.md  ux-eval.md
frontend/: package.json  pnpm-lock.yaml
(+22 files in other folders)
