[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.96.0",
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "google-play-scraper>=1.2.7",
    "httpx>=0.28.1",
    "pydantic[email]>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "sentence-transformers>=5.4.1",
    "supabase>=2.28.3",
    "uvicorn[standard]>=0.46.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "langdetect>=1.0.9",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
